# tsauth

./: CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: FindCURL.cmake  FindJSONC.cmake  FindmbedTLS.cmake
include/: encoding.h  endpoint.h  http.h  utils.h
misc/: archive  make-archive.sh
src/: encoding.c  endpoint.c  http.c  main.c  utils.c
